==> c1728p9/mbed/features/USBDevice/targets/TARGET_NUVOTON/TARGET_M480/USBHAL_M480.cpp <==
#include "USBHAL.h"
#include "M480.h"
#include "pinmap.h"

void USBHAL::remoteWakeup(void)
{
#if 0
    USBD->OPER |= USBD_OPER_RESUMEEN_Msk;
#endif
}

bool USBHAL::realiseEndpoint(uint8_t endpoint, uint32_t maxPacket, uint32_t options)
{
    uint32_t ep_type = 0;
    uint32_t ep_hw_index = NU_EP2EPH(endpoint);
    uint32_t ep_logic_index = NU_EP2EPL(endpoint);
    uint32_t ep_dir = (NU_EP_DIR(endpoint) == NU_EP_DIR_IN) ? USBD_CFG_EPMODE_IN : USBD_CFG_EPMODE_OUT;

    if(ep_logic_index == 3 || ep_logic_index == 4)
        ep_type = USBD_CFG_TYPE_ISO;

    USBD_CONFIG_EP(ep_hw_index, ep_dir | ep_type | ep_logic_index);
    /* Buffer range */
    USBD_SET_EP_BUF_ADDR(ep_hw_index, s_ep_buf_ind);

    if(ep_dir == USBD_CFG_EPMODE_OUT)
        USBD_SET_PAYLOAD_LEN(ep_hw_index, maxPacket);

    s_ep_mxp[ep_logic_index] = maxPacket;

    s_ep_buf_ind += maxPacket;

    return true;
}

void USBHAL::EP0write(uint8_t *buffer, uint32_t size)
{
    if (buffer && size) {
        if(s_ep_data_bit[0] & 1)
            USBD_SET_DATA1(EP0);
        else
            USBD_SET_DATA0(EP0);
        s_ep_data_bit[0]++;

        USBD_MemCopy((uint8_t *)USBD_BUF_BASE + USBD_GET_EP_BUF_ADDR(EP0), buffer, size);
        USBD_SET_PAYLOAD_LEN(EP0, size);
        if(size < MAX_PACKET_SIZE_EP0)
            s_ep_data_bit[0] = 1;

    } else {
        if(g_usbd_SetupPacket[0] & 0x80) {	//Device to Host
            // Status stage
            //			USBD_PrepareCtrlOut(0,0);
        } else {
            USBD_SET_DATA1(EP0);
            USBD_SET_PAYLOAD_LEN(EP0, 0);
        }
    }
}

EP_STATUS USBHAL::endpointWrite(uint8_t endpoint, uint8_t *data, uint32_t size)
{
    uint32_t ep_logic_index = NU_EP2EPL(endpoint);
    if(ep_logic_index == 0)
        return EP_INVALID;
    else {
        uint8_t *buf;
        uint32_t i=0;
        uint32_t ep_hw_index = NU_EP2EPH(endpoint);
        s_ep_compl |= (1 << ep_logic_index);
        buf = (uint8_t *)(USBD_BUF_BASE + USBD_GET_EP_BUF_ADDR(ep_hw_index));
        for(i=0; i<size; i++)
            buf[i] = data[i];

        /* Set transfer length and trigger IN transfer */
        USBD_SET_PAYLOAD_LEN(ep_hw_index, size);

    }
    return EP_PENDING;
}

void USBHAL::stallEndpoint(uint8_t endpoint)
{
    uint32_t ep_hw_index = NU_EP2EPH(endpoint);
    if (ep_hw_index >= NUMBER_OF_PHYSICAL_ENDPOINTS)
        return;

    USBD_SetStall(NU_EPH2EPL(ep_hw_index));

}

void USBHAL::unstallEndpoint(uint8_t endpoint)
{
    uint32_t ep_hw_index = NU_EP2EPH(endpoint);
    if (ep_hw_index >= NUMBER_OF_PHYSICAL_ENDPOINTS)
        return;
    USBD_ClearStall(NU_EPH2EPL(ep_hw_index));
}

void USBHAL::_usbisr(void)
{
    MBED_ASSERT(instance);
    instance->usbisr();
}

void USBHAL::usbisr(void)
{
    uint32_t u32IntSts = USBD_GET_INT_FLAG();
    uint32_t u32State = USBD_GET_BUS_STATE();

//------------------------------------------------------------------
    if(u32IntSts & USBD_INTSTS_VBDETIF_Msk) {
        // Floating detect
        USBD_CLR_INT_FLAG(USBD_INTSTS_VBDETIF_Msk);

        if(USBD_IS_ATTACHED()) {
            /* USB Plug In */
            USBD_ENABLE_USB();
        } else {
            /* USB Un-plug */
            USBD_DISABLE_USB();
        }
    }

//------------------------------------------------------------------
    if(u32IntSts & USBD_INTSTS_BUSIF_Msk) {
        /* Clear event flag */
        USBD_CLR_INT_FLAG(USBD_INTSTS_BUSIF_Msk);

        if(u32State & USBD_ATTR_USBRST_Msk) {
            /* Bus reset */
            USBD_ENABLE_USB();
            USBD_SwReset();
        }
        if(u32State & USBD_ATTR_SUSPEND_Msk) {
            /* Enable USB but disable PHY */
            USBD_DISABLE_PHY();
        }
        if(u32State & USBD_ATTR_RESUME_Msk) {
            /* Enable USB and enable PHY */
            USBD_ENABLE_USB();
        }
    }

    if(u32IntSts & USBD_INTSTS_USBIF_Msk) {
        // USB event
        if(u32IntSts & USBD_INTSTS_SETUP_Msk) {
            // Setup packet
            /* Clear event flag */
            USBD_CLR_INT_FLAG(USBD_INTSTS_SETUP_Msk);

            /* Clear the data IN/OUT ready flag of control end-points */
            USBD_STOP_TRANSACTION(EP0);
            USBD_STOP_TRANSACTION(EP1);
            EP0setupCallback();
        }

        // EP events
        if(u32IntSts & USBD_INTSTS_EP0) {
            /* Clear event flag */
            USBD_CLR_INT_FLAG(USBD_INTSTS_EP0);
            // control IN
            EP0in();

            // In ACK for Set address
            if((g_usbd_SetupPacket[0] == REQ_STANDARD) && (g_usbd_SetupPacket[1] == USBD_SET_ADDRESS)) {
                if((USBD_GET_ADDR() != s_usb_addr) && (USBD_GET_ADDR() == 0)) {
                    USBD_SET_ADDR(s_usb_addr);
                }
            }
        }
        if(u32IntSts & USBD_INTSTS_EP1) {
            /* Clear event flag */
            USBD_CLR_INT_FLAG(USBD_INTSTS_EP1);

            // control OUT
            EP0out();
        }

        uint32_t gintsts_epx = (u32IntSts >> 18) & 0x3F;
        uint32_t ep_hw_index = 2;
        while (gintsts_epx) {
            if(gintsts_epx & 0x01) {
                uint32_t ep_status = (USBD_GET_EP_FLAG() >> (ep_hw_index * 3 + 8)) & 0x7;
                /* Clear event flag */
                USBD_CLR_INT_FLAG(1 << (ep_hw_index + 16));

                if(ep_status == 0x02 || ep_status == 0x06 || (ep_status == 0x07 && NU_EPH2EPL(ep_hw_index) == 3)) {	//RX
                    if(ep_status == 0x07)
                        SOF(frame_cnt++);
                    if ((instance->*(epCallback[ep_hw_index-2]))()) {

                    }
                    USBD_SET_PAYLOAD_LEN(ep_hw_index,s_ep_mxp[NU_EPH2EPL(ep_hw_index)]);
                } else if(ep_status == 0x00 || ep_status == 0x07) {	//TX
                    s_ep_compl &= ~(1 << (NU_EPH2EPL(ep_hw_index)));
                    if ((instance->*(epCallback[ep_hw_index-2]))()) {
                    }
                }
            }

            gintsts_epx = gintsts_epx >> 1;
            ep_hw_index++;
        }
    }
}

void USBHAL::remoteWakeup(void)
{
    HSUSBD->OPER |= HSUSBD_OPER_RESUMEEN_Msk;
}

bool USBHAL::realiseEndpoint(uint8_t endpoint, uint32_t maxPacket, uint32_t options)
{
    uint32_t ep_type;
    uint32_t ep_hw_index = NU_EP2EPH(endpoint);

    HSUSBD_SetEpBufAddr(ep_hw_index, s_ep_buf_ind, maxPacket);
    s_ep_buf_ind += maxPacket;
    HSUSBD_SET_MAX_PAYLOAD(ep_hw_index, maxPacket);

    switch (NU_EP2EPL(endpoint)) {
    case 1:
    case 2:
        ep_type = HSUSBD_EP_CFG_TYPE_INT;
        break;

    case 3:
    case 4:
        ep_type = HSUSBD_EP_CFG_TYPE_ISO;
        break;

    default:
        ep_type = HSUSBD_EP_CFG_TYPE_BULK;
    }
    uint32_t ep_dir = (NU_EP_DIR(endpoint) == NU_EP_DIR_IN) ? HSUSBD_EP_CFG_DIR_IN : HSUSBD_EP_CFG_DIR_OUT;
    HSUSBD_ConfigEp(ep_hw_index, NU_EP2EPL(endpoint), ep_type, ep_dir);

    /* Enable USB/EPX interrupt */
    // NOTE: Require USBD_GINTEN_EPAIE_Pos, USBD_GINTEN_EPBIE_Pos, ... USBD_GINTEN_EPLIE_Pos to be consecutive.
    HSUSBD_ENABLE_USB_INT(HSUSBD->GINTEN | HSUSBD_GINTEN_USBIEN_Msk |
                          HSUSBD_GINTEN_CEPIEN_Msk |
                          1 << (ep_hw_index + HSUSBD_GINTEN_EPAIEN_Pos));  // Added USB/EPX interrupt

    if (ep_dir == 0)
        HSUSBD_ENABLE_EP_INT(ep_hw_index, HSUSBD_EPINTEN_RXPKIEN_Msk);
    else
        HSUSBD_ENABLE_EP_INT(ep_hw_index, HSUSBD_EPINTEN_TXPKIEN_Msk);
    return true;
}

void USBHAL::EP0write(uint8_t *buffer, uint32_t size)
{
    if (buffer && size) {
        g_usbd_CtrlInPointer = buffer;
        g_usbd_CtrlInSize = size;
        HSUSBD_CLR_CEP_INT_FLAG(HSUSBD_CEPINTSTS_INTKIF_Msk);
        HSUSBD_ENABLE_CEP_INT(HSUSBD_CEPINTEN_INTKIEN_Msk);
    } else {
        /* Status stage */
        s_ctrlin_packetsize = 0;
        HSUSBD_CLR_CEP_INT_FLAG(HSUSBD_CEPINTSTS_STSDONEIF_Msk);
        HSUSBD_SET_CEP_STATE(HSUSBD_CEPCTL_NAKCLR);
        HSUSBD_ENABLE_CEP_INT(HSUSBD_CEPINTEN_STSDONEIEN_Msk);
    }
}

EP_STATUS USBHAL::endpointWrite(uint8_t endpoint, uint8_t *data, uint32_t size)
{
    uint32_t ep_logic_index = NU_EP2EPL(endpoint);
    if(ep_logic_index == 0)
        return EP_INVALID;
    else {
        uint32_t ep_hw_index = NU_EP2EPH(endpoint);
        uint32_t mps = HSUSBD_GET_EP_MAX_PAYLOAD(ep_hw_index);
        if (size > mps) {
            return EP_INVALID;
        }
        if(size < mps)
            g_usbd_ShortPacket = 1;
        if (!(s_ep_compl & (1 << NU_EP2EPL(endpoint)))) {
            s_ep_compl |= (1 << ep_logic_index);

            while(1) {
                if (!(HSUSBD->DMACTL & HSUSBD_DMACTL_DMAEN_Msk))
                    break;
                else if (!HSUSBD_IS_ATTACHED())
                    break;
            }
            HSUSBD_SET_DMA_LEN(size);
            HSUSBD_SET_DMA_ADDR((uint32_t)data);
            HSUSBD_SET_DMA_READ(ep_logic_index);
            HSUSBD_ENABLE_DMA();
        }
    }
    return EP_PENDING;
}

void USBHAL::stallEndpoint(uint8_t endpoint)
{
    uint32_t ep_hw_index = NU_EP2EPH(endpoint);
    if (ep_hw_index >= NUMBER_OF_PHYSICAL_ENDPOINTS)
        return;
    HSUSBD_SetStall(ep_hw_index);
}

void USBHAL::unstallEndpoint(uint8_t endpoint)
{
    uint32_t ep_hw_index = NU_EP2EPH(endpoint);
    if (ep_hw_index >= NUMBER_OF_PHYSICAL_ENDPOINTS)
        return;
    HSUSBD_ClearStall(ep_hw_index);
}

void USBHAL::_usbisr(void)
{
    MBED_ASSERT(instance);
    instance->usbisr();
}

void USBHAL::usbisr(void)
{
    uint32_t gintsts = HSUSBD->GINTSTS & HSUSBD->GINTEN;
    if (! gintsts)
        return;

    if (gintsts & HSUSBD_GINTSTS_USBIF_Msk) {
        uint32_t busintsts = HSUSBD->BUSINTSTS & HSUSBD->BUSINTEN;

        /* SOF */
        if (busintsts & HSUSBD_BUSINTSTS_SOFIF_Msk) {
            HSUSBD_CLR_BUS_INT_FLAG(HSUSBD_BUSINTSTS_SOFIF_Msk);
            // TODO
            SOF(HSUSBD->FRAMECNT >> 3);
        }

        /* Reset */
        if (busintsts & HSUSBD_BUSINTSTS_RSTIF_Msk) {
            connect();
            HSUSBD_CLR_BUS_INT_FLAG(HSUSBD_BUSINTSTS_RSTIF_Msk);
            HSUSBD_CLR_CEP_INT_FLAG(0x1ffc);
        }

        /* Resume */
        if (busintsts & HSUSBD_BUSINTSTS_RESUMEIF_Msk) {
            HSUSBD_ENABLE_BUS_INT(HSUSBD_BUSINTEN_RSTIEN_Msk|HSUSBD_BUSINTEN_SUSPENDIEN_Msk | HSUSBD_BUSINTEN_SOFIEN_Msk | HSUSBD_BUSINTEN_SOFIEN_Msk);
            HSUSBD_CLR_BUS_INT_FLAG(HSUSBD_BUSINTSTS_RESUMEIF_Msk);
        }

        /* Suspend */
        if (busintsts & HSUSBD_BUSINTSTS_SUSPENDIF_Msk) {
            HSUSBD_ENABLE_BUS_INT(HSUSBD_BUSINTEN_RSTIEN_Msk | HSUSBD_BUSINTEN_RESUMEIEN_Msk |HSUSBD_BUSINTEN_SOFIEN_Msk);
            HSUSBD_CLR_BUS_INT_FLAG(HSUSBD_BUSINTSTS_SUSPENDIF_Msk);
        }

        /* High-speed */
        if (busintsts & HSUSBD_BUSINTSTS_HISPDIF_Msk) {
            HSUSBD_ENABLE_CEP_INT(HSUSBD_CEPINTEN_SETUPPKIEN_Msk);
            HSUSBD_CLR_BUS_INT_FLAG(HSUSBD_BUSINTSTS_HISPDIF_Msk);
        }

        /* DMA */
        if (busintsts & HSUSBD_BUSINTSTS_DMADONEIF_Msk) {
            if(HSUSBD->DMACTL & 0x10) {	/* IN - Read */
                if(g_usbd_ShortPacket) {
                    uint32_t ep_hw_index = NU_EPL2EPH((HSUSBD->DMACTL & 0xF));
                    HSUSBD_SET_EP_SHORT_PACKET(ep_hw_index);
                    g_usbd_ShortPacket = 0;
                }
            }
            HSUSBD_CLR_BUS_INT_FLAG(HSUSBD_BUSINTSTS_DMADONEIF_Msk);
        }

        /* PHY clock available */
        if (busintsts & HSUSBD_BUSINTSTS_PHYCLKVLDIF_Msk) {
            HSUSBD_CLR_BUS_INT_FLAG(HSUSBD_BUSINTSTS_PHYCLKVLDIF_Msk);
        }

        /* VBUS plug-in */
        if (busintsts & HSUSBD_BUSINTSTS_VBUSDETIF_Msk) {
            if (HSUSBD_IS_ATTACHED()) {
                // USB plug-in
                HSUSBD_ENABLE_USB();
            } else {
                // USB unplug-out
                HSUSBD_DISABLE_USB();
            }
            HSUSBD_CLR_BUS_INT_FLAG(HSUSBD_BUSINTSTS_VBUSDETIF_Msk);
        }
    }

    /* CEP interrupts */
    if (gintsts & HSUSBD_GINTSTS_CEPIF_Msk) {
        uint32_t cepintsts =  HSUSBD->CEPINTSTS & HSUSBD->CEPINTEN;

        /* SETUP token packet */
        if (cepintsts & HSUSBD_CEPINTSTS_SETUPTKIF_Msk) {
            HSUSBD_CLR_CEP_INT_FLAG(HSUSBD_CEPINTSTS_SETUPTKIF_Msk);
            return;
        }

        /* SETUP transaction */
        if (cepintsts & HSUSBD_CEPINTSTS_SETUPPKIF_Msk) {
            HSUSBD_CLR_CEP_INT_FLAG(HSUSBD_CEPINTSTS_SETUPPKIF_Msk);
            EP0setupCallback();
            return;
        }

        /* OUT token packet */
        if (cepintsts & HSUSBD_CEPINTSTS_OUTTKIF_Msk) {
            HSUSBD_CLR_CEP_INT_FLAG(HSUSBD_CEPINTSTS_OUTTKIF_Msk);
            HSUSBD_ENABLE_CEP_INT(HSUSBD_CEPINTEN_STSDONEIEN_Msk);
            return;
        }

        /* IN token packet */
        if (cepintsts & HSUSBD_CEPINTSTS_INTKIF_Msk) {
            HSUSBD_CLR_CEP_INT_FLAG(HSUSBD_CEPINTSTS_INTKIF_Msk);
            if (!(cepintsts & HSUSBD_CEPINTSTS_STSDONEIF_Msk)) {
                HSUSBD_CLR_CEP_INT_FLAG(HSUSBD_CEPINTSTS_TXPKIF_Msk);
                HSUSBD_ENABLE_CEP_INT(HSUSBD_CEPINTEN_TXPKIEN_Msk);
                HSUSBD_CtrlInput();
            } else {
                HSUSBD_CLR_CEP_INT_FLAG(HSUSBD_CEPINTSTS_TXPKIF_Msk);
                HSUSBD_ENABLE_CEP_INT(HSUSBD_CEPINTEN_TXPKIEN_Msk|HSUSBD_CEPINTEN_STSDONEIEN_Msk);
            }
            return;
        }

        /* PING packet */
        if (cepintsts & HSUSBD_CEPINTSTS_PINGIF_Msk) {
            HSUSBD_CLR_CEP_INT_FLAG(HSUSBD_CEPINTSTS_PINGIF_Msk);
            return;
        }

        /* IN transaction */
        if (cepintsts & HSUSBD_CEPINTSTS_TXPKIF_Msk) {
            EP0in();
            HSUSBD_CLR_CEP_INT_FLAG(HSUSBD_CEPINTSTS_TXPKIF_Msk);
            return;
        }

        /* OUT transaction */
        if (cepintsts & HSUSBD_CEPINTSTS_RXPKIF_Msk) {
            EP0out();
            HSUSBD_CLR_CEP_INT_FLAG(HSUSBD_CEPINTSTS_RXPKIF_Msk);
            return;
        }

        /* NAK handshake packet */
        if (cepintsts & HSUSBD_CEPINTSTS_NAKIF_Msk) {
            HSUSBD_CLR_CEP_INT_FLAG(HSUSBD_CEPINTSTS_NAKIF_Msk);
            return;
        }

        /* STALL handshake packet */
        if (cepintsts & HSUSBD_CEPINTSTS_STALLIF_Msk) {
            HSUSBD_CLR_CEP_INT_FLAG(HSUSBD_CEPINTSTS_STALLIF_Msk);
            return;
        }

        /* ERR special packet */
        if (cepintsts & HSUSBD_CEPINTSTS_ERRIF_Msk) {
            HSUSBD_CLR_CEP_INT_FLAG(HSUSBD_CEPINTSTS_ERRIF_Msk);
            return;
        }

        /* Status stage transaction */
        if (cepintsts & HSUSBD_CEPINTSTS_STSDONEIF_Msk) {
            if (s_usb_addr) {
                HSUSBD_SET_ADDR(s_usb_addr);
                s_usb_addr = 0;
            }
            HSUSBD_CLR_CEP_INT_FLAG(HSUSBD_CEPINTSTS_STSDONEIF_Msk);
            HSUSBD_ENABLE_CEP_INT(HSUSBD_CEPINTEN_SETUPPKIEN_Msk);
            return;
        }

        /* Buffer Full */
        if (cepintsts & HSUSBD_CEPINTSTS_BUFFULLIF_Msk) {
            HSUSBD_CLR_CEP_INT_FLAG(HSUSBD_CEPINTSTS_BUFFULLIF_Msk);
            return;
        }

        /* Buffer Empty */
        if (cepintsts & HSUSBD_CEPINTSTS_BUFEMPTYIF_Msk) {
            HSUSBD_CLR_CEP_INT_FLAG(HSUSBD_CEPINTSTS_BUFEMPTYIF_Msk);
            return;
        }
    }
    /* EPA, EPB, EPC, ... EPL interrupts */
    uint32_t gintsts_epx = gintsts >> 2;
    uint32_t ep_hw_index = 0;
    while (gintsts_epx) {
        if(gintsts_epx & 0x01) {
            uint32_t epxintsts = HSUSBD_GET_EP_INT_FLAG(ep_hw_index) & HSUSBD_GET_EP_INT_EN(ep_hw_index);

            HSUSBD_CLR_EP_INT_FLAG(ep_hw_index, epxintsts);

            /* Buffer Full */
            if (epxintsts & HSUSBD_EPINTSTS_BUFFULLIF_Msk) {
            }

            /* Buffer Empty */
            if (epxintsts & HSUSBD_EPINTSTS_BUFEMPTYIF_Msk) {
            }

            /* Short Packet Transferred */
            if (epxintsts & HSUSBD_EPINTSTS_SHORTTXIF_Msk) {
            }

            /* Data Packet Transmitted */
            if (epxintsts & HSUSBD_EPINTSTS_TXPKIF_Msk) {
                s_ep_compl &= ~(1 << (NU_EPH2EPL(ep_hw_index)));
                if ((instance->*(epCallback[ep_hw_index]))()) {
                }
            }

            /* Data Packet Received */
            if (epxintsts & HSUSBD_EPINTSTS_RXPKIF_Msk) {
                if ((instance->*(epCallback[ep_hw_index]))()) {

                }
            }

            /* OUT token packet */
            if (epxintsts & HSUSBD_EPINTSTS_OUTTKIF_Msk) {
            }

            /* IN token packet */
            if (epxintsts & HSUSBD_EPINTSTS_INTKIF_Msk) {
            }

            /* PING packet */
            if (epxintsts & HSUSBD_EPINTSTS_PINGIF_Msk) {
            }

            /* NAK handshake packet sent to Host */
            if (epxintsts & HSUSBD_EPINTSTS_NAKIF_Msk) {
            }

            /* STALL handshake packet sent to Host */
            if (epxintsts & HSUSBD_EPINTSTS_STALLIF_Msk) {
            }

            /* NYET handshake packet sent to Host */
            if (epxintsts & HSUSBD_EPINTSTS_NYETIF_Msk) {
            }

            /* ERR packet sent to Host */
            if (epxintsts & HSUSBD_EPINTSTS_ERRIF_Msk) {
            }

            /* Bulk Out Short Packet Received */
            if (epxintsts & HSUSBD_EPINTSTS_SHORTRXIF_Msk) {
            }
        }
        gintsts_epx = gintsts_epx >> 1;
        ep_hw_index++;
    }
}
